adding styling to techniques, shadows and creations Added tests for shadow added post tests for shadow and creation

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -111,7 +111,7 @@
 </ul>
 {% endif %}
       {% endblock intro %}
-    <div class="container-fluid mx-auto col-12 col-md-10"> 
+    <div class="container-fluid mx-auto col-12 col-lg-10">
         {% block content %} {% endblock content %}      
     </div>
     {% endblock body %}
