--- a/dive_app/templates/dive_app/creating/create_reflection.html
+++ b/dive_app/templates/dive_app/creating/create_reflection.html
@@ -13,7 +13,8 @@ Creative Reflection
 </div>
   <div class="card-body">
     <p class="card-title fs-5">A guided creative reflection:</p>
-    <p class="card-title"> Please relax and take your time thinking the prompts.</p>
+    <p class="card-title">Please relax and take your time thinking the prompts. They are a guided meditation of sorts, allow spontaneous answers if they emerge in your head.</p>
+    <p class="card-text">You can always come back to it later and you can always add a new entry.</p>
 
     <div class="card-title fs-5">Creative Prompts:</div>
     
