--- a/dive_app/templates/dive_app/shadow/shadow_item.html
+++ b/dive_app/templates/dive_app/shadow/shadow_item.html
@@ -46,7 +46,7 @@
 
       <a href="{% url 'dive_app:shadows_by_date' %}" class="card-link">Back to shadows</a>
 
-      <a href="{% url 'dive_app:index' %}" class="card-link">Back to Journaling</a>
+      <a href="{% url 'dive_app:index' %}" class="card-link">Back to Dive</a>
 
     </div>
   </div>
