--- a/techniques_app/templates/techniques_app/group_list.html
+++ b/techniques_app/templates/techniques_app/group_list.html
@@ -2,59 +2,73 @@
 <!--Step to separate techniques by component-->
 {% block title %}Components list{% endblock title %}
 
-{% block page_header%}
-<h2>By Component:{{topic|title}}</h2>
-{% endblock page_header %}
 
 {%block content%}
+<!--main card-->
+<div class="card my-3 pb-2 border border-primary">
+        <!-- card header -->
+        <div class="card-header bg-primary-subtle border border-primary border-3">
+                <div class="card-title display-6">Components List:</div>
 <a href="{% url 'techniques_app:techniques_long_community'%}">See them all</a>
-<!--Subjective component-->
-<div class='card' style="max-width: 800px;">
- <h3 class='card-title soft-green'>Subjective</h3>
-        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+        </div>
+
+        <div class="card-body">
+                
+<!--Subjective component card-->
+<div class="card mb-2">
+        <div class="card-header soft-green">
+ <h3 class='card-title '>Subjective</h3>
+ </div>
+        <ul class='list-group'>
         {%for subj in subjective %}
                 <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' subj.pk %}">{{subj.name|title}}</a>: {{subj.about}}</li>
         {%empty%}
                 <li>No tecniques added yet</li>
         {%endfor%}
         </ul>
+</div>
 
 <!--Extended component-->
-<div class='card' style="max-width: 800px;">
- <h3 class='card-title soft-green'>Extended Awareness</h3>
-
-        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+<div class="card mb-2">
+        <div class="card-header soft-green">
+                <h3 class='card-title'>Extended Awareness</h3>
+        </div>
+        <ul class='list-group'>
         {%for ext in extended %}
                 <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' ext.pk %}">{{ext.name|title}}</a>: {{ext.about}}</li>
         {%empty%}
                 <li>No tecniques added yet</li>
         {%endfor%}
         </ul>
-
+</div>
 <!--culture component-->
-<div class='card' style="max-width: 800px;">
- <h3 class='card-title soft-green'>Culture</h3>
-
-        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+<div class="card mb-2">
+        <div class="card-header soft-green">
+                <h3 class='card-title'>Culture</h3>
+        </div>
+        <ul class='list-group'>
         {%for cult in culture %}
                 <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' cult.pk %}">{{cult.name|title}}</a>: {{cult.about}}</li>
         {%empty%}
                 <li>No tecniques added yet</li>
         {%endfor%}
         </ul>
-
+</div>
 <!--Identity component-->
-<div class='card' style="max-width: 800px;">
- <h3 class='card-title soft-green'>Identity</h3>
-
-        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+<div class="card mb-2">
+        <div class="card-header soft-green">
+                <h3 class='card-title'>Identity</h3>
+        </div>
+        <ul class='list-group'>
         {%for id in identity %}
                 <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' id.pk %}">{{id.name|title}}</a>: {{id.about}}</li>
         {%empty%}
                 <li>No tecniques added yet</li>
         {%endfor%}
         </ul>
+</div>
 
+</div>
 
 </div>
 {%endblock content%}
