--- a/dive_app/templates/dive_app/shadow/edit_shadow.html
+++ b/dive_app/templates/dive_app/shadow/edit_shadow.html
@@ -2,23 +2,27 @@
 {% block content %}
 {% load django_bootstrap5 %}
 
+<div class="card cold-white mt-3 mb-3">
+    <div class="card-header soft-blue">
+    <div class="card-title display-6">
+      <i class="bi bi-shadows"></i> Edit Shadow</div>
+  </div>
+    <div class="card-body">
+        <p class="card-text">Editing: <a href="{% url 'dive_app:shadow_item' shadow.pk %}" class="card-link"> '{{shadow.title|title}}'</a></p>
 
 
-<p><a href="{% url 'dive_app:index' %}">{{topic}}</a></p>
-
-<p><i class="bi bi-shadows"></i>  Edit Shadow</p>
-
-<form action="{%url 'dive_app:edit_shadow' shadow.pk %}" method='post'>
+<form action="{%url 'dive_app:edit_shadow' shadow.pk %}" method='post' class="border border-primary p-2">
     {% csrf_token %}
     {% bootstrap_form form %}
-    {% bootstrap_button button_type='submit' content='Update Answer' %}
+    {% bootstrap_button button_type='submit' content='Update Shadow' %}
 </form>
 </br>
 
-<a href="{% url 'dive_app:after_answer_date' %}" class="card-link">Back to Shadow list</a></br>
-<a href="{% url 'dive_app:index' %}" class="card-link">Back to Journaling</a>
-</br>
-</br>
+<a href="{% url 'dive_app:shadows_by_date' %}" class="card-link">Back to Shadow list</a>
+<a href="{% url 'dive_app:index' %}" class="card-link">Back to Dive</a>
+
+</div>
+</div>
 
 
 {%endblock content%}
