--- a/techniques_app/templates/techniques_app/techniques_list_community.html
+++ b/techniques_app/templates/techniques_app/techniques_list_community.html
@@ -3,24 +3,27 @@
 <!--Receives two functions, with different lists of techniques, one with compnent tittle one with all of them-->
 
 {%block content%}
-
-<h2 class='mt-3'>List of Public Techniques</h2>
-
-{% if component %}
-<h3>Component: {{component.name|title}}</h3>
-{% endif%}
+<div class='card mt-2 mb-3 border-3 border-primary col-10'>
+<div class='card-heading p-3 soft-orange border-bottom border-primary rounded'>
+        {% if component %}
+        <h2 class='mt-2 display-5'>Techniques by: {{component.name|title}}</h2>
+        {% else %}
+        <h2 class='mt-2 display-5'>Community Techniques:</h2>
+        <a href="{% url 'techniques_app:components_list' %}" class="card-link">By Components</a>
+        {% endif %}
+   </div>
+   <div class='card-body soft-green'>
 
 <div class='card' style='max-width: 800px;'>
 <ul class='list-group border-bottom pb-2 mb-4 list-group-flush'>
 
         {%for tech in technique %}
-        <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:technique' tech.pk %}">{{tech|title}}</a>: "{{tech.text|slice:":50"}}..."</li>
+        <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:technique' tech.pk %}">{{tech|title}}</a>: "{{tech.text|truncatechars:70}}"</li>
         {%empty%}
         <li>No tecniques added yet</li>
         {%endfor%}
         </ul>
-{% if user.is_authenticated %}
 <a class='badge bg-primary p-2 m-2 mb-5' href="{%url 'techniques_app:new_technique' %}">Add new tecnique</a>
 </div>
-{% endif %}
-{%endblock content%}
+
+{% endblock content %}
