--- a/between_app/templates/between_app/personal_style/profile_test.html
+++ b/between_app/templates/between_app/personal_style/profile_test.html
@@ -3,32 +3,42 @@
 {% block title %}Profiles Test{% endblock title%}
 
 {%block content%}
-<div class="card">
+
+<div class="card mt-3 mb-4 warm-white">
+
+  <div class="card-header display-6 bg-primary-subtle border-primary p-3">Profile Test</div>
+  
+<div class="card-body p-3">
+  <p>This is a litle test to help you reflect about your prefered positions at the time of working with people.</p>
+  <p>It is composed of questions regaring your practice that add up to shape a profile. You can review previous tests and see your scores to have a more nuanced sense.</p>
+  <p>The idea is for it to be flexible, and for it to be representative of yourself. I hope it can help you as a mirror that keeps track of your process.</p>
+  <p>As a reference you can use the bellow numbers.</p>
+    <ul>
+      <li>Bellow 40% is desagreement</li>
+      <li>Between 40% and 60% its neutral</li>
+      <li>Between 60% and 80% its a clear preference</li>
+      <li>Between 80% and 100% its your prefered view</li>
+    </ul>
+
+<div
+  class="alert alert-info"
+  role="alert"
+>
+  👉 This test aims to help you reflect on your pratice. It does not have algorthms behind (only adds two sliders). You can come back and move the sliders to find what feels right.
+</div>
+
+<div class="card bg-light-sutble">
   <div class="card-body">
     <h4 class="card-title">Profile Test</h4>
-<p>This is a litle test to help you reflect about your prefered positions at the time of working with people.</p>
-<p>It is composed of questions regaring your practice that add up to shape a profile. You can review previous tests and see your scores to have a more nuanced sense.</p>
-<p>The idea is for it to be flexible, and for it to be representative of yourself. I hope it can help you as a fluent mirror that keeps track of your process.</p>
-<p>As a reference you can use the bellow numbers.</p>
-<ul>
-  <li>Bellow 40% is desagreement</li>
-  <li>Between 40% and 60% its neutral</li>
-  <li>Between 60% and 80% its a clear preference</li>
-  <li>Between 80% and 100% its your prefered view</li>
-</ul>
-</div>
-</div>
-
-<div class="card">
-  <div class="card-body">
-    <h4 class="card-title">Profile Test</h4>
-
-<form action="{% url 'between_app:profile_test' %}" method='post'>
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    {% bootstrap_button button_type='submit' content='Submit Profile' %}
-  </form>
-
+    
+    <form action="{% url 'between_app:profile_test' %}" method='post'>
+      {% csrf_token %}
+      {% bootstrap_form form %}
+      {% bootstrap_button button_type='submit' content='Submit Profile' %}
+    </form>
+    
+  </div>
+  </div>
 </div>
 </div>
 {% endblock content %}
