--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -104,13 +104,18 @@
 
       {% block body %}
       {% block intro %}
-    {% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+<!-- display messages of authentication. not in index (not sure why)-->
+      {% if messages %}
+      {% for message in messages %}
+          {% element alert level=message.tags %}
+              {% slot message %}
+                  {{ message }}
+              {% endslot %}
+          {% endelement %}
+      {% endfor %}
+  {% endif %}
+<!-- end messages-->
+
       {% endblock intro %}
     <div class="container-fluid mx-auto col-12 col-lg-10">
         {% block content %} {% endblock content %}      
