added logs to settings changed a assert redirect broght back looger instead of messags

--- a/between_app/templates/between_app/test-home.html
+++ b/between_app/templates/between_app/test-home.html
@@ -8,7 +8,7 @@
 <div class="card mb-3 mt-2 border-primary border-3 soft-green">
 <div class="card-body">
   <h2 class="card-title">Therapist Style</h2>
-    <p class='card-text'>Here you can see your therapeutic style</p>
+    <p class='card-text'>Here you can see your latest results and have an overview of your profile.</p>
   </div>
 </div>
 
