--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -39,7 +39,7 @@
           class="img-fluid rounded mb-2"
           alt=""
         />  
-          CreaTherapy</a>
+          CreaTherapy v.β</a>
 
         <button class='navbar-toggler' type='button' data-bs-toggle='collapse'
         data-bs-target='#navbarCollapse' aria-controls='navbarCollapse'
