--- a/between_app/templates/between_app/test-home.html
+++ b/between_app/templates/between_app/test-home.html
@@ -46,7 +46,7 @@
     <p>Here you will see your results</p>
       {% endif%} <!-- end if resoults -->
 
-  <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
+  <a class="badge bg-primary p-2 m-2" href="https://theory.crea-therapy.com/">Read the theory </a>
   <a class="badge bg-primary p-2 m-2" href={% url 'between_app:profiles_list' %}>See your tests </a></br>
 
   </div>
