--- a/between_app/templates/between_app/about_texts.html
+++ b/between_app/templates/between_app/about_texts.html
@@ -43,7 +43,7 @@
             <div class="col-md-6 ml-1 mt-1">
                 <div class="card shadow border-primary border-3 cold-white rounded  h-100">
                     <div class="card-body">
-                        <h3 class="card-title">Dive</h3>
+                        <h3 class="card-title">Diver Space</h3>
                         <p class="card-text">Dive into CreaTherapy approach to grow as a therapist. <a href="{% url 'dive_app:index' %}">Visit.</a></p></p>
                         <p class="card-text">
                             <i class="bi bi-brush"></i> <b>Creative prompt:</b> a step by step prompt for a creative process.
