fine tunning javascript animations for index page

--- a/between_app/templates/between_app/cover.html
+++ b/between_app/templates/between_app/cover.html
@@ -22,7 +22,7 @@
     <h1 class="t-bright-yellow" id="landing-text_1">Welcome back, {{user.username}}!</h1>
     <p class="text-light lead" id="landing-text_2">
       <i class="bi bi-brush-fill"></i> Keep exploring and playing!
-        <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">CreaTheory</a>
+        <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">Read Theory</a>
       </p>
         <a href="{% url 'between_app:test_home' %}" class="btn btn-lg btn-primary fw-bold" id="landing-button">See your tests</a>
 
@@ -41,7 +41,7 @@
   
  
     <div class="mt-auto text-white-50">
-      <p class="d-inline">Check out <a href="https://www.gabrielsoler.co.uk/">My site</a></p>
+      <p class="d-inline" id="my_site_link">Check out <a href="https://www.gabrielsoler.co.uk/">My site</a></p>
       <a href="#intro-card"><i class="bi bi-arrow-down-short mb-2 text-light position-absolute start-50 fs-4"></i></a>
 
     </div>
