--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -5,28 +5,28 @@
 
 {%block page_header%}{%endblock page_header%}
 
-{% block script%}{% static "between_app/js/index-cards.js"%}{% endblock script%}
+{% block page_script%}{% static "between_app/js/index_cards.js"%}{% endblock page_script%}
 {%block content%}
 
 
-<div class="card mb-3 shadow border-primary border-3 col-12 mx-auto" id="intro-card">
+<div class="card mb-3 shadow border-primary border-5 col-12 mx-auto" id="intro-card">
     <div class="card-body cold-white rounded" id="welcomeText">
     <div class="col-lg-12 mx-auto">
     <!--Two starting points depending on user authentication-->
         {% if user.is_authenticated%}
-        <h2 class="card-title" id="animateMe1">Hey, {{user.username}}!</h2>
-        <p class="card-text" id="animateMe2">Welcome back!</p>
-        <p class="card-text" id="animateMe3">Please explore the site and make it your own. All you do is being saved privately and you can come back to it any time.</p>
+        <h2 class="card-titl">Hey, {{user.username}}!</h2>
+        <p class="card-tex">Welcome back!</p>
+        <p class="card-tex">Please explore the site and make it your own. All you do is being saved privately and you can come back to it any time.</p>
         {% else %}
-        <h2 class="card-title" id="animateMe1">Hey!</h2>
-        <p class="card-text"  id="animateMe2">
+        <h2 class="card-titl">Hey!</h2>
+        <p class="card-text">
             <i class="bi bi-play-fill"></i>CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
-        <div class="wrapper" id="animateMe3">
+        <div class="wrappe">
             <p class="card-text">
             <i class="bi bi-play-fill"></i>This this app will help you create your own path and style, and track your changes, while giving you strong foundations.</p>
         <p class="card-text">
-            <i class="bi bi-play-fill"></i>This approach does not compete with your current approach, but to empower you as a creator of therapy. 
-            Read the theory in this <a class="link-secondary" href="theory.crea-therapy.com/" target="_blank">second site.</a></p>
+            <i class="bi bi-play-fill"></i>This model does not compete with your current approach, instead tries to invite you to participate in the creation of a therapeutic style. 
+            Read the theory in <a class="link-secondary" href="theory.crea-therapy.com/" target="_blank">CreaTheory.</a></p>
         </div class"wrapper">
             {%endif%}
     </div>
@@ -39,12 +39,12 @@
 
 {% block extra_body %}
 {% if user.is_authenticated == False %}
-<div class="alert alert-info display-5 mx-3 mt-3" role="alert">
-    Sign up for free to get full access. <a class="alert-link" href="{% url 'account_signup' %}">Sign up here.</a>
+<div class="alert alert-info display-5 mx-3 mt-3" role="alert" style="hight:3rem;" id="alert_bottom"><span id="alert_bottom_text">
+    Sign up for free to get full access. <a class="alert-link" href="{% url 'account_signup' %}">Sign up here.</a></span>
   </div>
 {% else %}
-<div class="alert alert-secondary display-5 mx-3 mt-3" role="alert">
-    Become a Diver user <a class="alert-link" href="{% url 'accounts:edit_status' %}"> here.</a>
+<div class="alert alert-secondary display-5 mx-3 mt-3" role="alert" style="hight:3rem;" id="alert_bottom"><span id="alert_bottom_text">
+    Become a Diver user <a class="alert-link" href="{% url 'accounts:edit_status' %}"> here.</a><span>
   </div>
 {% endif %}
 {% endblock extra_body %}
